[gd_scene load_steps=6 format=3 uid="uid://bgs3rlyryu8km"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_43y44"]
[ext_resource type="Script" path="res://scenes/camera.gd" id="2_la1fp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g5606"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mc5te"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_huhox"]
height = 2.84878
radius = 0.952131

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_43y44")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("CapsuleShape3D_g5606")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_mc5te")

[node name="CameraManager" type="Node3D" parent="."]
visible = false
script = ExtResource("2_la1fp")

[node name="Arm" type="SpringArm3D" parent="CameraManager"]
transform = Transform3D(-1, 3.69465e-08, -7.92319e-08, 0, 0.906308, 0.422618, 8.74228e-08, 0.422618, -0.906308, 0, 2, -2.7)

[node name="Camera3D" type="Camera3D" parent="CameraManager/Arm"]

[node name="ResourcesDetector" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="ResourcesDetector"]
shape = SubResource("CylinderShape3D_huhox")

[connection signal="body_entered" from="ResourcesDetector" to="." method="_on_resources_detector_body_entered"]
[connection signal="body_exited" from="ResourcesDetector" to="." method="_on_resources_detector_body_exited"]
